<resources>
    <string name="app_name">Geocaching App</string>

    <!-- Fragment Titles -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Add</string>

    <!-- Location -->
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start</string>
    <string name="stop_updates">Stop</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <!-- Permissions -->
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="compass_description">Compass</string>

    <!-- QR Code Generation -->
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Name (optional)</string>
    <string name="generate_qr_code">Create Code</string>
    <string name="print">Print</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile">Profile</string>

    <string name="title_settings">Settings</string>

    <!-- Scan QR Code -->
    <string name="scan_qr_code">Scan QR Code</string>

    <!-- Copied from https://www.geeksforgeeks.org/how-to-read-qr-code-using-camview-library-in-android/ -->
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>

    <!-- bottom sheet strings -->
    <string name="print_options">Print Options</string>
    <string name="default_print">Print</string>
    <string name="default_send">Send</string>
    <string name="print_description">This uses the android default print interface to print. Make sure to print the QR code so that it is sized correctly.</string>
    <string name="send_description">This sends the QR code to another device or drive through your choice of communication method.</string>

    <!-- Configure QR Code -->
    <string name="not_scanned_text">Valid QR Code not scanned. Please create a QR code, then scan it to finish creating your new geocache.</string>
    <string name="name_field">Name</string>
    <string name="save_button_desc">Save</string>
    <string name="desc_field">Description</string>
    <string name="camera_button_desc">Add Picture</string>
    <string name="home_fab_desc">Add QR Code</string>
    <string name="start_tracking_button_text">Start Tracking</string>
    <string name="photo">photo</string>
    <string name="gallery_item_description">image</string>
    <string name="coordinates_default">Coordinates: 0, 0</string>
    <string name="address_default">Address: None</string>

    <!-- AR strings -->
    <string name="depth_use_explanation" translatable="false">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
    <string name="button_text_enable_depth" translatable="false">Enable</string>
    <string name="button_text_disable_depth" translatable="false">Disable</string>
    <string name="options_title_with_depth" translatable="false">Your device supports depth</string>
    <string name="options_title_without_depth" translatable="false">Your device does not support depth</string>
    <string name="done" translatable="false">Done</string>
    <string-array name="depth_options_array" translatable="false">
        <item>Enable depth</item>
        <item>Show depth map</item>
    </string-array>
    <string name="options_title_instant_placement" translatable="false">Instant Placement options</string>
    <string name="open_maps_desc">Open in Google Maps</string>
    <string name="scan_code_button">Scan Code</string>
    <string name="default_print_description">Either print or send your new QR code so that others can find it.</string>
    <string-array name="instant_placement_options_array" translatable="false">
        <item>Enable Instant Placement</item>
    </string-array>
</resources>