<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.geocachingapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_qrcode"
            app:destination="@id/navigation_qrcode" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.geocachingapp.ui.search.SearchPagerFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search_pager" />

    <fragment
        android:id="@+id/navigation_qrcode"
        android:name="com.example.geocachingapp.ui.qrcode.QrPagerFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_qr_pager" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.geocachingapp.SettingsFragment"
        android:label="@string/title_settings" />
</navigation>